--- a/src/app/component/board/board.scss
+++ b/src/app/component/board/board.scss
@@ -68,18 +68,39 @@
   justify-self: center;
 }
 
-.bg-muted:not(.hidden) {
-  background: var(--mat-sys-surface-variant);
+.bg-muted {
   color: var(--mat-sys-on-surface-variant);
+
+  &::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+    border-radius: inherit;
+    background: var(--mat-sys-surface-variant);
+    transition: filter 0.5s ease-out, opacity 0.5s ease-out;
+  }
 }
 
-.cell.bg-muted.hidden {
+.bg-muted.hidden.cell {
   box-shadow: 0px 0px calc(14cqmin / var(--columnCount)) 0px var(--mat-sys-surface-variant);
 }
 
 .color-1 {
-  &:not(.hidden) {
+  &::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+    border-radius: inherit;
     background-color: var(--color-1);
+    transition: filter 0.5s ease-out, opacity 0.5s ease-out;
   }
 
   &.hidden {
@@ -88,8 +109,17 @@
 }
 
 .color-2 {
-  &:not(.hidden) {
+  &::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+    border-radius: inherit;
     background-color: var(--color-2);
+    transition: filter 0.5s ease-out, opacity 0.5s ease-out;
   }
 
   &.hidden {
@@ -98,8 +128,17 @@
 }
 
 .color-3 {
-  &:not(.hidden) {
+  &::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+    border-radius: inherit;
     background-color: var(--color-3);
+    transition: filter 0.5s ease-out, opacity 0.5s ease-out;
   }
 
   &.hidden {
@@ -108,8 +147,17 @@
 }
 
 .color-4 {
-  &:not(.hidden) {
+  &::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+    border-radius: inherit;
     background-color: var(--color-4);
+    transition: filter 0.5s ease-out, opacity 0.5s ease-out;
   }
 
   &.hidden {
@@ -118,8 +166,17 @@
 }
 
 .color-5 {
-  &:not(.hidden) {
+  &::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+    border-radius: inherit;
     background-color: var(--color-5);
+    transition: filter 0.5s ease-out, opacity 0.5s ease-out;
   }
 
   &.hidden {
@@ -128,8 +185,17 @@
 }
 
 .color-6 {
-  &:not(.hidden) {
+  &::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+    border-radius: inherit;
     background-color: var(--color-6);
+    transition: filter 0.5s ease-out, opacity 0.5s ease-out;
   }
 
   &.hidden {
@@ -138,8 +204,17 @@
 }
 
 .color-7 {
-  &:not(.hidden) {
+  &::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+    border-radius: inherit;
     background-color: var(--color-7);
+    transition: filter 0.5s ease-out, opacity 0.5s ease-out;
   }
 
   &.hidden {
@@ -148,8 +223,17 @@
 }
 
 .color-8 {
-  &:not(.hidden) {
+  &::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+    border-radius: inherit;
     background-color: var(--color-8);
+    transition: filter 0.5s ease-out, opacity 0.5s ease-out;
   }
 
   &.hidden {
@@ -158,8 +242,17 @@
 }
 
 .color-9 {
-  &:not(.hidden) {
+  &::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+    border-radius: inherit;
     background-color: var(--color-9);
+    transition: filter 0.5s ease-out, opacity 0.5s ease-out;
   }
 
   &.hidden {
@@ -214,6 +307,11 @@
   width: calc((100cqmin - var(--headerSpacing) - ((var(--columnCount) - 2) * var(--cellGap)))/ var(--columnCount));
 }
 
+.cell.hidden::before {
+  filter: blur(10px);
+  opacity: 0;
+}
+
 .corner-number {
   position: absolute;
   top: 0cqmin;
@@ -229,8 +327,14 @@
   visibility: hidden;
 }
 
-.cell-number {
+.main-number {
   font-size: calc(17cqmin / var(--columnCount) * 3);
+  transition: filter 0.5s ease-out, opacity 0.5s ease-out;
+}
+
+.main-number.cleared-text {
+  filter: blur(5px);
+  opacity: 0;
 }
 
 .circle {
@@ -277,7 +381,9 @@
 }
 
 @keyframes spinDashed {
-  to { transform: rotate(360deg); }
+  to {
+    transform: rotate(360deg);
+  }
 }
 
 .processing::after {
@@ -289,4 +395,3 @@
   animation: spinDashed 1.8s ease-in-out infinite;
   z-index: 1;
 }
-
