--- a/src/app/app.html
+++ b/src/app/app.html
@@ -29,6 +29,8 @@
       [matBadgeHidden]="!versionCheckService.isUpdateAvailable"
       matBadgePosition="before"
       matBadge="!"
+      aria-hidden="false"
+      aria-label="Notification"
       >refresh</mat-icon
     >
     <span>
