--- a/src/app/component/board/board.scss
+++ b/src/app/component/board/board.scss
@@ -67,6 +67,13 @@
   line-height: normal;
 }
 
+.previously-completed {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  flex-flow: column;
+}
 
 .game-table {
   border-collapse: collapse;
