--- a/src/app/component/cell/cell.component.scss
+++ b/src/app/component/cell/cell.component.scss
@@ -1,13 +1,13 @@
 :host {
-  --color-1: light-dark(#f15c5c, #50322d);
-  --color-2: light-dark(#f38347, #943501);
-  --color-3: light-dark(#f5e94e, #817d00);
-  --color-4: light-dark(#8ed091, #1b5e20);
-  --color-5: light-dark(#5e9799, #840046);
-  --color-6: light-dark(#66a7e8, #0062af);
-  --color-7: light-dark(#9192d7, #282a93);
-  --color-8: light-dark(#e8acff, #540dab);
-  --color-9: light-dark(#b57881, #9e0b91);
+  --color-1: light-dark(#ff8f8f, #943501);
+  --color-2: light-dark(#ffad63, #50322d);
+  --color-3: light-dark(#fff67d, #817d00);
+  --color-4: light-dark(#91d594, #1b5e20);
+  --color-5: light-dark(#4beff5, #0062af);
+  --color-6: light-dark(#62acf6, #282a93);
+  --color-7: light-dark(#a0a7c7, #540dab);
+  --color-8: light-dark(#e8acff, #9e0b91);
+  --color-9: light-dark(#ff55cd, #840046);
   // These need to be defined in the parent component css... if things are displaying weird it's likely because
   // the defaults are being used here as it can't find the value specified in the parent.
   --_headerSpacing: var(--headerSpacing, -100px);
