--- a/src/app/component/cell/cell.component.html
+++ b/src/app/component/cell/cell.component.html
@@ -19,6 +19,7 @@
     [class.wiggle]="cell.invalidMove"
     [class.hidden]="cell.hideBackground"
     [class.processing]="cell.processing"
+    [class.shape]="shapesMode"
     [style.--columnCount]="columnCount"
     appHammer
     (touchStart)="touchStart(cell)"
