--- a/src/app/component/cell/cell.component.scss
+++ b/src/app/component/cell/cell.component.scss
@@ -52,6 +52,14 @@
   &.hidden {
     box-shadow: 0px 0px calc(14cqmin / var(--columnCount)) 0px var(--color-1);
   }
+
+  // Shape mode: use clip-path instead of background
+  &.shape::before {
+    background: transparent;
+    clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+    background-color: var(--color-1);
+    border-radius: 0; // Remove border radius for shapes
+  }
 }
 
 .color-2 {
@@ -70,6 +78,13 @@
 
   &.hidden {
     box-shadow: 0px 0px calc(14cqmin / var(--columnCount)) 0px var(--color-2);
+  }
+
+  &.shape::before {
+    background: transparent;
+    clip-path: polygon(20% 0%, 80% 0%, 80% 20%, 100% 20%, 100% 80%, 80% 80%, 80% 100%, 20% 100%, 20% 80%, 0% 80%, 0% 20%, 20% 20%);
+    background-color: var(--color-2);
+    border-radius: 0;
   }
 }
 
@@ -90,6 +105,13 @@
   &.hidden {
     box-shadow: 0px 0px calc(14cqmin / var(--columnCount)) 0px var(--color-3);
   }
+
+  &.shape::before {
+    background: transparent;
+    clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
+    background-color: var(--color-3);
+    border-radius: 0;
+  }
 }
 
 .color-4 {
@@ -108,6 +130,13 @@
 
   &.hidden {
     box-shadow: 0px 0px calc(14cqmin / var(--columnCount)) 0px var(--color-4);
+  }
+
+  &.shape::before {
+    background: transparent;
+    clip-path: polygon(50% 0%, 90% 20%, 100% 60%, 75% 100%, 25% 100%, 0% 60%, 10% 20%);
+    background-color: var(--color-4);
+    border-radius: 0;
   }
 }
 
@@ -128,6 +157,13 @@
   &.hidden {
     box-shadow: 0px 0px calc(14cqmin / var(--columnCount)) 0px var(--color-5);
   }
+
+  &.shape::before {
+    background: transparent;
+    clip-path: polygon(50% 0%, 100% 38%, 82% 100%, 18% 100%, 0% 38%);
+    background-color: var(--color-5);
+    border-radius: 0;
+  }
 }
 
 .color-6 {
@@ -146,6 +182,13 @@
 
   &.hidden {
     box-shadow: 0px 0px calc(14cqmin / var(--columnCount)) 0px var(--color-6);
+  }
+
+  &.shape::before {
+    background: transparent;
+    clip-path: polygon(0% 0%, 100% 0%, 100% 75%, 50% 100%, 0% 75%);
+    background-color: var(--color-6);
+    border-radius: 0;
   }
 }
 
@@ -166,6 +209,13 @@
   &.hidden {
     box-shadow: 0px 0px calc(14cqmin / var(--columnCount)) 0px var(--color-7);
   }
+
+  &.shape::before {
+    background: transparent;
+    clip-path: polygon(20% 0%, 80% 0%, 100% 100%, 0% 100%);
+    background-color: var(--color-7);
+    border-radius: 0;
+  }
 }
 
 .color-8 {
@@ -184,6 +234,13 @@
 
   &.hidden {
     box-shadow: 0px 0px calc(14cqmin / var(--columnCount)) 0px var(--color-8);
+  }
+
+  &.shape::before {
+    background: transparent;
+    clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
+    background-color: var(--color-8);
+    border-radius: 0;
   }
 }
 
@@ -204,6 +261,11 @@
   &.hidden {
     box-shadow: 0px 0px calc(14cqmin / var(--columnCount)) 0px var(--color-9);
   }
+
+
+  // &.shape::before {
+  // no need for a custom shape, we'll just leave one of the cells with a solid BG
+  // }
 }
 
 .cell {
@@ -255,7 +317,6 @@
   align-items: center;
   justify-content: center;
 }
-
 
 @keyframes wiggle {
 
