--- a/src/app/component/settings/settings.scss
+++ b/src/app/component/settings/settings.scss
@@ -3,6 +3,16 @@
   padding: 20px;
 }
 
+.settings-title {
+  text-align: center;
+  margin-top: 0px;
+  margin-bottom: 40px;
+}
+
+.settings-section {
+  margin-top: 60px;
+}
+
 section {
   margin-bottom: 20px;
 }
