--- a/src/app/component/cell/cell.component.html
+++ b/src/app/component/cell/cell.component.html
@@ -21,7 +21,7 @@
     [class.processing]="cell.processing"
     [class.shape]="shapesMode"
     [style.--columnCount]="columnCount"
-    appHammer
+    appGesture
     (touchStart)="touchStart(cell)"
     (tap)="use(cell)"
     (doubleTap)="clear(cell)"
