--- a/src/app/component/stats/stats.scss
+++ b/src/app/component/stats/stats.scss
@@ -76,3 +76,33 @@
 .sad-3 {
   animation: sad-3-animation 0.7s ease-in-out;
 }
+
+.streak-value-wrapper {
+  position: relative;
+  text-align: center;
+}
+
+.tear {
+  position: absolute;
+  top: 5px;
+  width: 4px;
+  height: 8px;
+  background-color: #66b3ff;
+  border-radius: 50%;
+  opacity: 0;
+  animation: fall 1.5s ease-in forwards;
+}
+
+@keyframes fall {
+  0% {
+    transform: translateY(0);
+    opacity: 0;
+  }
+  20% {
+    opacity: 1;
+  }
+  100% {
+    transform: translateY(40px);
+    opacity: 0;
+  }
+}
