--- a/src/app/component/settings/settings.html
+++ b/src/app/component/settings/settings.html
@@ -32,7 +32,7 @@
       />
     </mat-form-field>
     <button
-      mat-raised-button
+      matButton="outlined"
       color="warn"
       [disabled]="!canDelete"
       (click)="deleteAllData()"
