displaying count of moves for accuracy history

--- a/src/app/component/board/board.html
+++ b/src/app/component/board/board.html
@@ -38,6 +38,7 @@
             [streak]="streak"
             [previousStreak]="previousStreak"
             [accuracy]="accuracy"
+            [accuracyHistory]="accuracyHistory"
           ></app-stats>
 
           <div class="dev-controls">
