--- a/src/app/component/settings/settings.html
+++ b/src/app/component/settings/settings.html
@@ -12,8 +12,7 @@
     <p>
       When enabled, color-coded groups will display a unique shape in each cell,
       providing an alternative visual cue for players who may have difficulty
-      distinguishing colors. This can enhance accessibility and gameplay for a
-      wider audience.
+      distinguishing colors.
     </p>
   </section>
 
