animating rollback of streak

--- a/src/app/component/stats/stats.html
+++ b/src/app/component/stats/stats.html
@@ -6,9 +6,26 @@
   <div class="stat-item">
     <span class="stat-label">Streak</span>
     <div class="streak-value-wrapper">
-      <span class="stat-value" [class]="streakAnimationClass">
-        {{ streak }}
-      </span>
+      @if (isCountingDown) {
+        <div class="stat-value streak-countdown" [class]="streakAnimationClass">
+          @for (digit of previousStreakDigits; track $index) {
+            <div class="digit-roller">
+              <div
+                class="digit-roller-inner"
+                style="--from-digit: {{ digit }};"
+              >
+                <span>9</span><span>8</span><span>7</span><span>6</span
+                ><span>5</span><span>4</span><span>3</span><span>2</span
+                ><span>1</span><span>0</span>
+              </div>
+            </div>
+          }
+        </div>
+      } @else {
+        <span class="stat-value" [class]="streakAnimationClass">
+          {{ streak }}
+        </span>
+      }
       @for (tear of tears; track $index) {
         <div
           class="tear"
