--- a/src/app/component/stats/stats.scss
+++ b/src/app/component/stats/stats.scss
@@ -117,6 +117,37 @@
   }
 }
 
+.red-orb {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 5em;
+  height: 5em;
+  background: radial-gradient(
+    circle,
+    transparent 50%,
+    red 70%,
+    rgba(255, 0, 0, 0) 80%
+  );
+  border-radius: 50%;
+  animation: radiate-in 1.5s ease-out forwards;
+  transform: translate(-50%, -50%);
+}
+
+@keyframes radiate-in {
+  from {
+    transform: translate(-50%, -50%) scale(3);
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  to {
+    transform: translate(-50%, -50%) scale(1);
+    opacity: 0;
+  }
+}
+
 .tear {
   position: absolute;
   top: 5px;
