--- a/src/app/component/stats/stats.scss
+++ b/src/app/component/stats/stats.scss
@@ -123,12 +123,10 @@
   left: 50%;
   width: 5em;
   height: 5em;
-  background: radial-gradient(
-    circle,
-    transparent 50%,
-    red 70%,
-    rgba(255, 0, 0, 0) 80%
-  );
+  background: radial-gradient(circle,
+      transparent 50%,
+      red 70%,
+      rgba(255, 0, 0, 0) 80%);
   border-radius: 50%;
   animation: radiate-in 1.5s ease-out forwards;
   transform: translate(-50%, -50%);
@@ -139,11 +137,29 @@
     transform: translate(-50%, -50%) scale(3);
     opacity: 0;
   }
+
   50% {
     opacity: 1;
   }
+
   to {
     transform: translate(-50%, -50%) scale(1);
+    opacity: 0;
+  }
+}
+
+.streak-countdown.slide-up {
+  animation: slide-up-and-fade 0.5s ease-in forwards;
+}
+
+@keyframes slide-up-and-fade {
+  from {
+    transform: translateY(0);
+    opacity: 1;
+  }
+
+  to {
+    transform: translateY(-1em);
     opacity: 0;
   }
 }
