showing longest streak stat

--- a/src/app/component/board/board.html
+++ b/src/app/component/board/board.html
@@ -37,6 +37,7 @@
             [mistakes]="mistakes"
             [streak]="streak"
             [previousStreak]="previousStreak"
+            [longestStreak]="longestStreak"
             [accuracy]="accuracy"
             [accuracyHistory]="accuracyHistory"
           ></app-stats>
