--- a/src/app/component/stats/stats.scss
+++ b/src/app/component/stats/stats.scss
@@ -18,6 +18,12 @@
   color: light-dark(rgba(0, 0, 0, 0.6), rgba(255, 255, 255, 0.7));
   text-transform: uppercase;
   letter-spacing: 0.5px;
+  height: 2.2em;
+  line-height: 1.1em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
 
 .stat-value {
