--- a/src/app/component/stats/stats.html
+++ b/src/app/component/stats/stats.html
@@ -1,6 +1,6 @@
 <div class="stat-container">
   <div class="stat-item">
-    <span class="stat-label">Mistakes</span>
+    <span class="stat-label">Board Mistakes</span>
     <span class="stat-value">{{ mistakes }}</span>
   </div>
   <div class="stat-item">
