--- a/src/app/component/board/board.scss
+++ b/src/app/component/board/board.scss
@@ -66,13 +66,15 @@
 .dev-controls {
   display: inline-flex;
   align-items: center;
-  gap: 10px;
 }
 
 .unsolvable {
   display: inline-flex;
   align-items: center;
   gap: 5px;
+  justify-content: center;
+  margin-top: 10px;
+  margin-bottom: -10px;
 }
 
 .container {
