--- a/src/app/component/stats/stats.scss
+++ b/src/app/component/stats/stats.scss
@@ -4,6 +4,8 @@
   padding: 10px 20px;
   background-color: light-dark(rgba(0, 0, 0, 0.05), rgba(255, 255, 255, 0.1));
   border-radius: 12px;
+  margin-left: 6px;
+  margin-right: 6px;
 }
 
 .stat-item {
