--- a/src/app/component/cell/cell.component.scss
+++ b/src/app/component/cell/cell.component.scss
@@ -1,4 +1,5 @@
 :host {
+  position: relative;
   --color-1: light-dark(#ff8f8f, #943501);
   --color-2: light-dark(#ffad63, #50322d);
   --color-3: light-dark(#fff67d, #817d00);
@@ -364,4 +365,37 @@
   border-radius: 50%;
   animation: spinDashed 1.8s ease-in-out infinite;
   z-index: 1;
+}
+
+@keyframes magnify-and-move {
+  0% {
+    transform: scale(1);
+    box-shadow: none;
+  }
+
+  30% {
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+  }
+
+  100% {
+    transform: scale(var(--scaleFactor)) translateY(calc(-60cqmin / var(--columnCount))) translateX(var(--moveX));
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+  }
+}
+
+.magnifier-view {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 1000;
+  pointer-events: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  .cell {
+    animation: magnify-and-move 0.3s ease-out forwards;
+  }
 }
