documentation: long press action

--- a/src/app/component/documentation/documentation.html
+++ b/src/app/component/documentation/documentation.html
@@ -53,9 +53,10 @@
       number <em>is</em> part of the solution.”
     </li>
     <li>
-      <strong>Hide unused cells:</strong> <em>Double-tap</em> or <em>swipe down</em> (or <em>right-click</em> on
-      desktop) to <strong>remove</strong> a number — “this number
-      <em>is not</em> part of the solution.”
+      <strong>Hide unused cells:</strong> <em>Double-tap</em> or
+      <em>swipe down</em> (or <em>right-click</em> on desktop) to
+      <strong>remove</strong> a number — “this number <em>is not</em> part of
+      the solution.”
     </li>
     <li>
       <strong>Built-in feedback:</strong> If you try to keep a number that
@@ -74,7 +75,16 @@
         <li>
           Tap or <em>swipe up</em> → <strong>Select (circle)</strong> a number.
         </li>
-        <li><em>Double-tap</em> or <em>swipe down</em> → <strong>Remove</strong> a number.</li>
+        <li>
+          <em>Double-tap</em> or <em>swipe down</em> → <strong>Remove</strong> a
+          number.
+        </li>
+        <li>
+          <em>Long-press</em> → <strong>Magnify</strong> cell content
+          <span class="note"
+            >(useful for viewing small text on smaller screens).</span
+          >
+        </li>
       </ul>
     </li>
     <li>
@@ -83,7 +93,10 @@
         <li>
           <span class="kbd">Click</span> → <strong>Select (circle)</strong>
         </li>
-        <li><span class="kbd">Double-click</span> or <span class="kbd">Right-click</span> → <strong>Remove</strong></li>
+        <li>
+          <span class="kbd">Double-click</span> or
+          <span class="kbd">Right-click</span> → <strong>Remove</strong>
+        </li>
       </ul>
     </li>
   </ul>
