--- a/src/app/app.html
+++ b/src/app/app.html
@@ -14,6 +14,17 @@
     Game
   </button>
 
+  @if (boardVisible) {
+    <button
+      mat-menu-item
+      (click)="boardUiService.requestUndo()"
+      [disabled]="!(canUndo)"
+    >
+      <mat-icon>undo</mat-icon>
+      Undo
+    </button>
+  }
+
   <button mat-menu-item routerLink="/documentation">
     <mat-icon>book</mat-icon>
     How To Play
